Add circular time selector and update sound controls

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,11 @@
                     <div class="time-selector">
                         <div class="time-marker"></div>
                     </div>
-                    <span class="time">00:00</span>
+                    <div class="time-display">
+                        <span class="time">00:00</span>
+                        <span class="time-label">минут</span>
+                    </div>
+                    <div class="circle-gradient"></div>
                 </div>
             </div>
             
