--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,56 +9,41 @@
 </head>
 <body>
     <div class="app">
-        <!-- Основной круговой таймер -->
-        <div class="timer-container">
-            <div class="timer-ring">
-                <svg class="ring-progress" viewBox="0 0 100 100">
-                    <circle class="ring-background" cx="50" cy="50" r="45"/>
-                    <circle class="ring-foreground" cx="50" cy="50" r="45"/>
-                </svg>
-                <div class="drag-handle"></div>
-                <div class="timer-display">
-                    <span class="time">20</span>
-                    <span class="time-label">минут</span>
-                </div>
+        <!-- Круговой таймер -->
+        <div class="timer">
+            <svg class="timer-ring" viewBox="0 0 100 100">
+                <circle class="ring-bg" cx="50" cy="50" r="45" />
+                <circle class="ring-progress" cx="50" cy="50" r="45" />
+            </svg>
+            <div class="handle"></div>
+            <div class="timer-display">
+                <span class="time">20</span>
+                <span class="label">минут</span>
             </div>
         </div>
 
         <!-- Выбор звука -->
         <h3 class="section-title">Выберите аудио эффект</h3>
-        <div class="sound-selector">
+        <div class="sounds">
             <div class="sound-option" data-sound="silence">
-                <div class="sound-icon">🕊</div>
-                <div class="sound-label">Тишина</div>
+                <div class="icon">🕊</div>
+                <div class="label">Тишина</div>
             </div>
             <div class="sound-option" data-sound="rain">
-                <div class="sound-icon">🌧</div>
-                <div class="sound-label">Дождь</div>
+                <div class="icon">🌧</div>
+                <div class="label">Дождь</div>
             </div>
             <div class="sound-option" data-sound="forest">
-                <div class="sound-icon">🌲</div>
-                <div class="sound-label">Лес</div>
+                <div class="icon">🌲</div>
+                <div class="label">Лес</div>
             </div>
             <div class="sound-option" data-sound="ocean">
-                <div class="sound-icon">🌊</div>
-                <div class="sound-label">Океан</div>
+                <div class="icon">🌊</div>
+                <div class="label">Океан</div>
             </div>
         </div>
 
-        <!-- Кнопка старта -->
-        <button class="start-button">Начать медитацию</button>
-
-        <!-- Статистика -->
-        <div class="stats-container">
-            <div class="stat-item">
-                <div class="stat-value">0</div>
-                <div class="stat-label">Дней подряд</div>
-            </div>
-            <div class="stat-item">
-                <div class="stat-value">0</div>
-                <div class="stat-label">Всего минут</div>
-            </div>
-        </div>
+        <button class="start">Начать медитацию</button>
     </div>
     <script src="app.js"></script>
 </body>
