--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Медитация</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="app">
@@ -45,6 +45,6 @@
 
         <button class="start">Начать медитацию</button>
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html> 
