--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,8 @@
             </svg>
             <div class="handle"></div>
             <div class="timer-display">
-                <span class="time">20</span>
+                <span class="life-label">жизнь</span>
+                <span class="time">∞</span>
                 <span class="label">минут</span>
             </div>
         </div>
