Add circular time selector and update sound controls 20

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
             <div class="handle"></div>
             <div class="timer-display">
                 <span class="life-label">жизнь</span>
-                <span class="time">∞</span>
+                <span class="time infinity">∞</span>
                 <span class="label">минут</span>
                 <div class="breathing-text"></div>
             </div>
